# text-to-anki

./: LICENSE  README.md  pyproject.toml
src/: main.py  test.py
