[tool.poetry]
name = "text-to-anki"
version = "0.1.0"
description = ""
authors = ["Sergey G <maingrishy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyMuPDF = "^1.20.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
